--- a/ColorControl.html
+++ b/ColorControl.html
@@ -8,7 +8,8 @@
         <script src="ColorPicker.js"></script>
         <script>
             // document.selectedColor = new Color(ColorFormat.RGB, 126, 255, 201);
-            document.selectedColor = new Color("#7EFFC9");
+            //document.selectedColor = new Color("#7EFFC9");
+            document.selectedColor = new Color("rgb(126, 255, 201)");
             document.colorPicker = new ColorPicker(document.selectedColor, ColorFormat.RGB);
             document.body.append(document.colorPicker);
             document.colorPicker.addEventListener("color-change", () => {
