--- a/ColorControl.html
+++ b/ColorControl.html
@@ -3,6 +3,11 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="ColorPicker.css">
+        <style>
+            body {
+                background-color: lightblue;
+            }
+        </style>
     </head>
     <body ondragstart="return false;" ondrop="return false;">
         <script src="ColorPicker.js"></script>
@@ -18,6 +23,12 @@
             document.colorPicker.addEventListener("eyedropperclick", () => {
                 document.eyeDropperClicked = !document.eyeDropperClicked;
             }, false);
+
+            // Stub out some Blink hooks so we don't get script errors when popup tries to
+            // call them
+            window.pagePopupController = {};
+            window.pagePopupController.setValue = (value) => { console.log(`setValue: ${value}`); };
+            window.pagePopupController.closePopup = () => { console.log('closePopup'); };
         </script>
     </body>
 </html>
