--- a/ColorControl.html
+++ b/ColorControl.html
@@ -12,6 +12,10 @@
     <body ondragstart="return false;" ondrop="return false;">
         <script src="ColorPicker.js"></script>
         <script>
+            window.global = {};
+            window.global.params = {};
+            window.global.params.isBorderTransparent = true;
+
             document.selectedColor = new Color(ColorFormat.RGB, 234, 95, 176);
             //document.selectedColor = new Color("#7EFFC9");
             //document.selectedColor = new Color("rgb(126, 255, 201)");
