Use isBorderTransparent of false in html file since it is only true on mac OS.

--- a/ColorControl.html
+++ b/ColorControl.html
@@ -14,7 +14,7 @@
         <script>
             window.global = {};
             window.global.params = {};
-            window.global.params.isBorderTransparent = true;
+            window.global.params.isBorderTransparent = false;
 
             document.selectedColor = new Color(ColorFormat.RGB, 234, 95, 176);
             //document.selectedColor = new Color("#7EFFC9");
